[package]
name = "keyring-cursed"
version = "0.1.0"
edition = "2021"
description = "A wrapper over keyring that stripes large secrets across multiple entries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pierrekin/keyring-cursed"
keywords = ["keyring", "password", "secret", "credential"]
categories = ["os", "authentication"]

[dependencies]
keyring = { version = "3", features = ["apple-native"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
